fix flex-wrap for after-action screens

--- a/iframe/style.css
+++ b/iframe/style.css
@@ -77,7 +77,7 @@ a:hover {
 
 .modal {
   margin: 0 auto;
-  width: 520px;
+  width: 530px;
   display: table;
   border-radius: 0.5rem;
   background-color: #0d0a24;
@@ -217,7 +217,6 @@ a:hover {
   text-transform: uppercase;
   letter-spacing: 0.1rem;
   -webkit-appearance: none;
-  flex: 1;
 }
 
 .modal input[type="submit"]:hover {
@@ -229,7 +228,8 @@ a:hover {
 }
 
 .modal .prompt input[type="submit"] {
-  min-width: 0;
+  min-width: 20%;
+  max-width: 40%;
   flex: 2;
 }
 
@@ -272,17 +272,15 @@ a:hover {
   margin: 0;
   padding: 0;
   display: flex;
+  flex-wrap: wrap;
   align-items: left;
+  justify-content: space-between;
   list-style-type: none;
 }
 
 .modal footer li {
-  margin-left: 0.5rem;
+  margin: 0 0.25rem 0.5rem;
   flex: 1 0 auto;
-}
-
-.modal footer li:first-child {
-  margin-left: 0;
 }
 
 .modal footer button {
@@ -455,6 +453,27 @@ body.slow #logos img {
   .modal input[name="member[phone_number]"] {
     min-width: 80%;
     margin-left: 0;
+  }
+}
+
+@media (min-width: 530px) {
+  .modal footer li:first-child {
+    margin-left: 0;
+  }
+
+  .modal footer li:last-child {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 430px) {
+  .modal input[name="userPhone"] {
+    min-width: 90%;
+    margin: 0 0 0.5rem 0;
+  }
+
+  .modal .prompt input[type="submit"] {
+    max-width: 100%;
   }
 }
 
